<resources>
    <string name="app_name">Rainmember</string>

    <!-- Placeholder Text -->
    <string name="syncing_info">Syncing...</string>

    <!-- Navigation -->
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_alarms">Alarms</string>

    <!-- Preference flags and Labels -->
    <string name="umbrella_preference">UMBRELLA_PREFERENCE</string>
    <string name="umbrella_component">Should I bring an umbrella?</string>

    <string name="sunscreen_preference">SUNSCREEN_PREFERENCE</string>
    <string name="sunscreen_component">Sunscreen or not Sunscreen?</string>

    <string name="temp_comp_preference">TEMPERATURE_COMPARISON_PREFERENCE</string>
    <string name="temp_comp_component">Temperature Comparison</string>

    <string name="life_suggestion_preference">LIFE_SUGGESTION_PREFERENCE</string>
    <string name="life_suggestion_component">Life Suggestions</string>

    <string name="location_comp_preference">LOCATION_COMPARISON_PREFERENCE</string>
    <string name="location_comp_preference_default_value">NO_CITY_SET</string>

    <!-- WeatherData Flags -->
    <string name="flag_current">CURRENT</string>
    <string name="flag_comparison">COMPARISON</string>

    <!-- Broadcast Flags -->
    <string name="dashboard_change">DASHBOARD_CHANGE</string>
    <string name="weather_data_change">WEATHER_DATA_CHANGE</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_alarm">CreateAlarmActivity</string>

    <!-- Abbreviated Weekdays Text -->
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <!-- Texts for "Umbrella" component -->
    <string name="umbrella_yes">YES</string>
    <string name="umbrella_no">NO</string>

    <!-- Texts for "Life Suggestion" component -->
    <string name="life_suggestion_no_data">We don\'t have any idea of the weather conditions at your location, so we can\'t recommend anything. That\'s okay, It\'s not like you depend on us for living or something like that. Just do what you wanna do.</string>
    <string name="life_suggestion_no_suggestion">We don\'t have any recommendations for now. But know that can do anything you want! Go ahead, the world is yours!</string>
    <string name="life_suggestion_danger">Okay, so the forecast told us there is a %1$s at your location. Maybe worrying about fancy activities might not be the best thing to do at the moment. We hope you are okay.</string>
    <string name="life_suggestion_beach">With the current temperature of %1$d°C and %2$s, It\'s a great day for going to the beach! Don\'t forget your sunscreen!</string>
    <string name="life_suggestion_netflix">It\'s %1$d°C outside and raining. What about making some microwave popcorn (I heard microwaves have a button just for that) and watch something on your favorite streaming platform?</string>
    <string name="life_suggestion_bike_or_walking">It\'s not raining and about %1$d°C outside, temperature which the writer of this recommendation finds pretty comfortable for biking or walking on the park. If you think that too, take that as a suggestion!</string>
    <string name="life_suggestion_picnic">Well, it\'s %1$d°C outside and the weather is clear. Why don\'t you get that checkered towel, a straw basket, fruits, wine, that nice company and go on a picnic?</string>
    <string name="life_suggestion_fondue">%1$d°C and %2$s means just one thing: fondue. Okay, maybe it could mean a thousand other things, but you got it. Just google \'fondue\' and give it a try!</string>
    <string name="life_suggestion_indoor">Maybe %1$d°C is not the best weather for outdoor stuff, but going on indoor activities can be really nice. What about going to a nice restaurant, shopping or even indoor climbing?</string>

    <!-- Texts for "Sunscreen" component -->
    <string name="sunscreen_card_title">Sunscreen Tip</string>
    <string name="sunscreen_no_data">We couldn\'t retrieve the UV data right now. But you should wear sunscreen anyway, just in case!</string>
    <string name="sunscreen_dont_need">No need for sunscreen, the sun is being nice at this time!</string>
    <string name="sunscreen_moderate">Remember to put sunscreen! The UV index is Moderate.</string>
    <string name="sunscreen_high">Remember to put sunscreen and avoid sun exposure between 10am and 4pm! The UV index is High.</string>
    <string name="sunscreen_very_high">Remember to put A LOT OF sunscreen and avoid sun exposure between 10am and 4pm! The UV index is Very High</string>
    <string name="sunscreen_extreme">Put a LOT of sunscreen every 2 hours. Avoid sun exposure! The UV index is EXTREME. Are you sure you want to leave your house now?</string>

    <!-- Texts for "Clothing Suggestion" component -->
    <string name="clothe_suggestion_hot">It\'s kinda hot, you should wear something fresh!</string>
    <string name="clothe_suggestion_cold">It\'s cold! Bring a jacket!</string>
    <string name="clothe_suggestion_nice">The weather is nice! You can wear anything you like!</string>

    <!-- Texts for "Temperature Comparison" component -->
    <string name="temperature_comparison_no_city">For comparing anything, you must choose a city first. Tap me!</string>
    <string name="temperature_comparison_no_data">We don\'t have any idea of the weather conditions at this location yet. We are terribly sorry. Come back later to check if we manage to do it!</string>
    <string name="temperature_comparison_colder_1">%1$s is colder than %2$s.</string>
    <string name="temperature_comparison_colder_2">%1$s is much colder than %2$s.</string>
    <string name="temperature_comparison_hotter_1">%1$s is hotter than %2$s.</string>
    <string name="temperature_comparison_hotter_2">%1$s is much hotter than %2$s.</string>
    <string name="temperature_comparison_equal_temp">Awww, aren\'t %1$s and %2$s cute? They are about the same temperature! Lovely.</string>
    <string name="temperature_comparison_wet_1">%1$s is wetter than %2$s. It may be a little easier to breathe at where you are right now.</string>
    <string name="temperature_comparison_wet_2">%1$s is a lot wetter than %2$s. It may be a much easier to breathe at where you are right now.</string>
    <string name="temperature_comparison_dry_1">%1$s is drier than %2$s. It may be a little harder to breathe at where you are right now.</string>
    <string name="temperature_comparison_dry_2">%1$s is much more drier than %2$s. It may be harder to breathe at where you are right now.</string>
    <string name="temperature_comparison_equal_humidity">1$s and %2$s are about the same humidity!</string>
    <string name="temperature_comparison_less_letters">Also, %1$s has %2$d less characters than %3$s. Just thought you would want to know.</string>
    <string name="temperature_comparison_more_letters">Also, %1$s has %2$d more characters than %3$s. Just thought you would want to know.</string>
    <string name="temperature_comparison_equal_letters">Also, %1$s and %2$s have the same amout of characters. Just thought you would want to know.</string>

    <!-- Channels -->
    <string name="channel_id">REMINDER_CHANNEL</string>
    <string name="channel_name">Weather Reminders</string>
    <string name="channel_description">User defined periodic weather reminders and tips</string>

    <string name="clothing_suggestion_preference">CLOTHING_SUGGESTION_PREFERENCE</string>
    <string name="clothing_suggestions_component">What should I wear?</string>

    <string name="quote_of_the_day_preference">QUOTE_OF_THE_DAY_PREFERENCE</string>
    <string name="quote_of_the_day_component">Quote of The Day</string>

    <!-- Buttons -->
    <string name="settings_button">Settings</string>

    <!-- Placeholders for Adapter and Quick Info Items -->
    <string name="alarm_item_time_placeholder">06:30</string>
    <string name="alarm_item_days_placeholder">mon, tue, wed, thu, fri, sat, sun</string>
    <string name="location_text_placeholder">Location</string>
    <string name="temperature_text_placeholder">Temperature</string>
    <string name="weather_text_placeholder">Weather</string>
    <string name="uv_data_text_placeholder">UV Data</string>

    <!-- Content Descriptions -->
    <string name="suggested_top_cloth_icon">Suggested top cloth icon</string>
    <string name="suggested_bottom_cloth_icon">Suggested bottom cloth icon</string>
    <string name="sunscreen_skin_fps_graphic">Sunscreen skin FPS graphic</string>
    <string name="set_alarm_switch_description">Set alarm switch</string>
    <string name="add_alarm_button_description">Add alarm button</string>
    <string name="alarm_time_picker_description">Alarm time picker</string>
    <string name="monday_checkbox_description">Monday checkbox</string>
    <string name="tuesday_checkbox_description">Tuesday checkbox</string>
    <string name="wednesday_checkbox_description">Wednesday checkbox</string>
    <string name="thursday_checkbox_description">Thursday checkbox</string>
    <string name="friday_checkbox_description">Friday checkbox</string>
    <string name="saturday_checkbox_description">Saturday checkbox</string>
    <string name="sunday_checkbox_description">Sunday checkbox</string>
    <string name="create_alarm_button_description">Create alarm button</string>
    <string name="umbrella_image_description">Umbrella image</string>

    <!-- Other -->
    <string name="alarm_explanation_text">Long press an alarm to delete it</string>
</resources>
