
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:key="@string/umbrella_preference"
        app:title="@string/umbrella_component"
        />

    <SwitchPreference
        app:key="@string/sunscreen_preference"
        app:title="@string/sunscreen_component"
        />

    <SwitchPreference
        app:key="@string/temp_comp_preference"
        app:title="@string/temp_comp_component"
        />

    <SwitchPreference
        app:key="@string/life_suggestion_preference"
        app:title="@string/life_suggestion_component"
        />

    <ListPreference
        android:id="@+id/locationList"
        android:defaultValue="false"
        android:entries="@array/location_pref_entries"
        android:entryValues="@array/location_pref_values"
        app:key="@string/location_comp_preference"
        app:title="@string/location_comp_component" />
</androidx.preference.PreferenceScreen>