<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".alarm.CreateAlarmActivity"
    tools:showIn="@layout/activity_create_alarm">

    <TimePicker
        android:id="@+id/alarm_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Alarm time picker"
        android:background="@color/colorAccent"
        android:headerBackground="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Monday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/monday"
            app:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBox_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Tuesday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/tuesday"
            app:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBox_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Wednesday checkbox"
            android:text="@string/wednesday"
            app:buttonTint="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/checkBox_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Thursday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/thursday"
            app:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBox_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Friday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/friday"
            app:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBox_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Saturday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/saturday"
            app:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBox_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Sunday checkbox"
            android:color="@color/colorPrimaryDark"
            android:text="@string/sunday"
            app:buttonTint="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>