<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/alarm_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarm_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14sp"
            android:layout_marginRight="14sp"
            android:text="@string/alarm_item_time_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="52sp"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/alarm_days_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14sp"
            android:layout_marginRight="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/alarm_item_days_placeholder"
            android:textSize="18sp" />

    </LinearLayout>

    <Switch
        android:id="@+id/toggle_alarm_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="28sp"
        android:layout_weight="1"
        android:layout_marginEnd="28sp"
        android:contentDescription="@string/set_alarm_switch_description"/>

</LinearLayout>